# buff

./: .gitignore  Cargo.toml  README.md  package-lock.json
docs/superpowers/plans/: 2026-06-04-kuatin-bullet-journal-tui.md  2026-06-05-dispatch-dry-refactor.md  2026-06-05-main-run-refactor.md  2026-06-05-named-notes.md  2026-06-05-rich-notes-and-meeting-reentry.md  2026-06-05-right-panel.md  2026-06-06-capture-box-cursor-movement.md  2026-06-06-indent-markers.md  2026-06-06-llm-scaffolding.md  2026-06-07-llm-chat-panel-phase1.md  2026-06-07-meeting-time-commands.md  2026-06-07-theme-support.md  2026-06-07-ui-ux-improvements.md  2026-06-08-section-command.md  2026-06-08-vim-notes-editor.md  2026-06-09-complexity-refactor.md  2026-06-09-vim-enter-edit-line.md  2026-06-09-vim-ux-fixes.md  2026-06-10-meeting-assistant.md  2026-06-10-metadata-slash-commands.md  2026-06-10-note-formatting.md  2026-06-10-note-scroll-management.md  2026-06-10-style-line-refactor.md  2026-06-11-api-key.md  2026-06-11-input-action-namespacing.md  2026-06-12-default-light-dark-themes.md  2026-06-12-light-dark-commands.md  2026-06-12-notes-pane-italic-markdown.md  2026-06-12-terminal-bg-fg-colors.md  2026-06-14-chat-panel-markdown.md
docs/superpowers/specs/: 2026-06-05-named-notes-design.md  (+29 more)
src/: config.rs  lib.rs  main.rs  storage.rs
src/app/: actions.rs  command.rs  context.rs  input.rs  llm.rs  mod.rs  state.rs
src/model/: day.rs  mod.rs  parser.rs  writer.rs
src/ui/: calendar.rs  capture.rs  chat_panel.rs  document.rs  help.rs  layout.rs  markdown.rs  mod.rs  right_panel.rs  theme.rs
(+6 files in other folders)
