[package]
name = "buff"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "1"
directories = "6"
shellexpand = "3"
anyhow = "1"
crossterm = "0.29.0"
ureq = "2"
serde_json = "1"

[dev-dependencies]
crossterm = "0.29.0"
tempfile = "3"
